[package]
name = "ruth_planner"
version = "0.0.1"
edition = "2021"
description = "A collection of search-based path planning algorithms written in Rust."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
image = "0.24.5"
plotters = "0.3.4"